hoot/static/food/css/location_detail.css
/* Buttons */

a.button
{
    display: inline-block;
    border: 0.125em solid rgb(64,64,64);
    padding: 0.125em 0.5em;
    line-height: 1em;
    text-align: center;
    text-decoration: none;
    background-color: transparent;
    color: rgb(64,64,64);
}

a.button:active
{
    background-color: rgb(64,64,64);
    color: white;
}

a.button.disabled
{
    opacity: 0.5;
    background-color: transparent;
    color: rgb(64,64,64);
    cursor: default;
}

/* Locations */

div.location
{
    position: relative;
}

div.location > h1
{
    margin: 0.375em 0.125em;
}

div.location.editable > h1
{
    margin-right: 2.25em;
}

div.location > div.info
{
    max-height: 15em;
    opacity: 1;

    -webkit-transition-property: max-height, margin, opacity;
    -moz-transition-property: max-height, margin, opacity;
    -ms-transition-property: max-height, margin, opacity;
    -o-transition-property: max-height, margin, opacity;
    transition-property: max-height, margin, opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.location > div.info.hidden
{
    max-height: 0;
    margin: 0;
    opacity: 0;
}

ul.location-buttons
{
    position: absolute;
    top: 3em;
    right: 0;
    display: inline-block;
    margin: 0;
    padding-right: 1em;
    background-color: rgb(240,240,240);
    overflow: hidden;
}

ul.location-buttons > li
{
    margin: 1.5em 0 1.5em 1em;
    float: left;
}

div.location > div.categories.hidden
{
    display: none;
}

/* Categories */

div.category
{
    position: relative;
    margin: 0;
    background-color: rgb(175,230,116);
    overflow: hidden;

    -webkit-transition-property: background-color;
    -moz-transition-property: background-color;
    -ms-transition-property: background-color;
    -o-transition-property: background-color;
    transition-property: background-color;

    -webkit-transition-duration: 0s;
    -moz-transition-duration: 0s;
    -ms-transition-duration: 0s;
    -o-transition-duration: 0s;
    transition-duration: 0s;
}

div.category > h2
{
    padding-right: 1.25em;
}

div.category.editable > h2
{
    padding-right: 5.5em;
}

div.category > h2::after
{
    content: url(../img/arrow-d-64.png);
    position: absolute;
    top: 1.45em;
    right: 0.25em;

    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    transform: rotate(-90deg);

    -webkit-transform-origin: 0% 0%;
    -moz-transform-origin: 0% 0%;
    -ms-transform-origin: 0% 0%;
    -o-transform-origin: 0% 0%;
    transform-origin: 0% 0%;
}

div.category.collapsed > h2::after
{
    top: 0.45em;
    right: -0.75em;

    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    transform: rotate(90deg);
}

.no-js div.category > h2, div.category.empty > h2
{
    padding-right: 0;
}

.no-js div.category.editable > h2, div.category.editable.empty > h2
{
    padding-right: 4em;
}

.no-js div.category > h2::after, div.category.empty > h2::after
{
    content: none;
}

div.category:nth-child(2n)
{
    background-color: rgb(163,207,104);
}

div.category.empty
{
    background-color: white;
}

div.category.empty:nth-child(2n)
{
    background-color: rgb(240,240,240);
}

div.category.out
{
    background-color: rgb(245,164,157);
}

div.category.out:nth-child(2n)
{
    background-color: rgb(220,148,141);
}

div.category.highlight, div.category.highlight:nth-child(2n)
{
    background-color: rgb(255,213,125);

    -webkit-transition-duration: 0s;
    -moz-transition-duration: 0s;
    -ms-transition-duration: 0s;
    -o-transition-duration: 0s;
    transition-duration: 0s;
}

div.category > h3
{
    height: 0;
    margin: 0;
    opacity: 0;

    -webkit-transition-property: height, margin, opacity;
    -moz-transition-property: height, margin, opacity;
    -ms-transition-property: height, margin, opacity;
    -o-transition-property: height, margin, opacity;
    transition-property: height, margin, opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.category.collapsed > h3
{
    height: 1.5em;
    margin: 0.75em 0;
    opacity: 1;
}

div.category > div.items
{
    max-height: 30em;
    opacity: 1;
    overflow: hidden;

    -webkit-transition-property: max-height, opacity;
    -moz-transition-property: max-height, opacity;
    -ms-transition-property: max-height, opacity;
    -o-transition-property: max-height, opacity;
    transition-property: max-height, opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.category.collapsed > div.items
{
    max-height: 0;
    opacity: 0;
}

ul.category-buttons
{
    position: absolute;
    top: 2em;
    right: 6em;
    margin: 0;
    padding-right: 1em;
    overflow: hidden;
}

.no-js ul.category-buttons, div.category.empty > ul.category-buttons
{
    right: 0;
}

ul.category-buttons > li
{
    margin: 1.5em 0 1.5em 1em;
    float: left;
}

/* Items */

div.item
{
    position: relative;
    display: inline-block;
    height: 7.5em;
    margin: 0 1em 1.5em 0;
    padding: 0 1em;
    background-color: rgb(175,230,116);
    float: left;
    overflow: hidden;

    -webkit-transition-property: padding-right, background-color;
    -moz-transition-property: padding-right, background-color;
    -ms-transition-property: padding-right, background-color;
    -o-transition-property: padding-right, background-color;
    transition-property: padding-right, background-color;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.item.active, .no-js div.item
{
    padding: 0 8.5em 0 1em;
}

div.item.out
{
    background-color: rgb(245,164,157);
}

div.item.highlight
{
    background-color: rgb(255,213,125);

    -webkit-transition-duration: 0s;
    -moz-transition-duration: 0s;
    -ms-transition-duration: 0s;
    -o-transition-duration: 0s;
    transition-duration: 0s;
}

div.item > h3
{
    margin-bottom: 0;
}

div.item > p
{
    margin-top: 0;
    font-weight: 200;
}

ul.item-buttons
{
    position: absolute;
    top: 0;
    right: -8.5em;
    opacity: 0;

    -webkit-transition-property: right, opacity;
    -moz-transition-property: right, opacity;
    -ms-transition-property: right, opacity;
    -o-transition-property: right, opacity;
    transition-property: right, opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.item.active > ul.item-buttons, .no-js ul.item-buttons
{
    right: 1em;
    opacity: 1;
}

ul.item-buttons > li
{
    margin: 0.75em 0;
}

ul.item-buttons a
{
    width: 4.5em;
}

/* Popups */

body.noscroll
{
    overflow: hidden;
}

div#overlay
{
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0,0,0,0.5);
    opacity: 1;
    overflow-y: scroll;
    z-index: 1;

    -webkit-transition-property: opacity;
    -moz-transition-property: opacity;
    -ms-transition-property: opacity;
    -o-transition-property: opacity;
    transition-property: opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div#overlay.hidden
{
    right: 100%;
    bottom: 100%;
    opacity: 0;
}

div.popup
{
    box-sizing: border-box;
    width: 100%;
    min-width: 768px;
    max-width: 1024px;
    margin: 4.5em auto;
    padding: 0 1em;
    box-shadow: 0 0 85px rgba(0,0,0,0.3);
    background-color: white;
    overflow: hidden;
}

div.popup > h2
{
    margin-bottom: 0;
}

ul.popup-buttons
{
    overflow: hidden;
}

ul.popup-buttons > li
{
    margin-right: 1em;
    float: left;
}

/* Statusbars */

div.statusbar
{
    height: 1.5em;
    margin-top: 1.5em;
    padding: 0.75em 1em;
    background-color: rgb(240,240,240);
    overflow: hidden;

    -webkit-transition-property: height, margin-top, padding-top, padding-bottom, opacity;
    -moz-transition-property: height, margin-top, padding-top, padding-bottom, opacity;
    -ms-transition-property: height, margin-top, padding-top, padding-bottom, opacity;
    -o-transition-property: height, margin-top, padding-top, padding-bottom, opacity;
    transition-property: height, margin-top, padding-top, padding-bottom, opacity;

    -webkit-transition-duration: 0.35s;
    -moz-transition-duration: 0.35s;
    -ms-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
}

div.statusbar.error
{
    background-color: rgb(245,164,157);
}

div.statusbar.warning
{
    background-color: rgb(255,216,148);
}

div.statusbar.success
{
    background-color: rgb(175,230,116);
}

div.statusbar.info
{
    background-color: rgb(151,203,255);
}

div.statusbar.busy
{
    background-image: -webkit-repeating-linear-gradient(45deg, rgb(240,240,240), rgb(240,240,240) 1.25em, rgb(224,224,224) 1.25em, rgb(224,224,224) 2.5em);
    background-image: -moz-repeating-linear-gradient(45deg, rgb(240,240,240), rgb(240,240,240) 1.25em, rgb(224,224,224) 1.25em, rgb(224,224,224) 2.5em);
    background-image: -ms-repeating-linear-gradient(45deg, rgb(240,240,240), rgb(240,240,240) 1.25em, rgb(224,224,224) 1.25em, rgb(224,224,224) 2.5em);
    background-image: -o-repeating-linear-gradient(45deg, rgb(240,240,240), rgb(240,240,240) 1.25em, rgb(224,224,224) 1.25em, rgb(224,224,224) 2.5em);
    background-image: repeating-linear-gradient(45deg, rgb(240,240,240), rgb(240,240,240) 1.25em, rgb(224,224,224) 1.25em, rgb(224,224,224) 2.5em);
    -webkit-animation-name: busyAnim;
    -moz-animation-name: busyAnim;
    -ms-animation-name: busyAnim;
    -o-animation-name: busyAnim;
    animation-name: busyAnim;
    -webkit-animation-duration: 60s;
    -moz-animation-duration: 60s;
    -ms-animation-duration: 60s;
    -o-animation-duration: 60s;
    animation-duration: 60s;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
    -ms-animation-timing-function: linear;
    -o-animation-timing-function: linear;
    animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -ms-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
}

@-webkit-keyframes busyAnim
{
    from { background-position-x: -375em; }
    to { background-position-x: 0; }
}
@-moz-keyframes busyAnim
{
    from { background-position-x: -375em; }
    to { background-position-x: 0; }
}
@-ms-keyframes busyAnim
{
    from { background-position-x: -375em; }
    to { background-position-x: 0; }
}
@-o-keyframes busyAnim
{
    from { background-position-x: -375em; }
    to { background-position-x: 0; }
}
@keyframes busyAnim
{
    from { background-position-x: -375em; }
    to { background-position-x: 0; }
}

div.statusbar.hidden
{
    height: 0;
    margin-top: 0;
    padding: 0 1em;
    opacity: 0;
}

div.statusbar > p
{
    margin: 0;
}

div.popup > div.statusbar
{
    margin: 1.5em -1em 0;
}

div.popup > div.statusbar.hidden
{
    margin: 0 -1em;
}

/* Misc. */

div.slow-trans
{
    -webkit-transition-duration: 3s;
    -moz-transition-duration: 3s;
    -ms-transition-duration: 3s;
    -o-transition-duration: 3s;
    transition-duration: 3s;
}

